--- a/teaching.html
+++ b/teaching.html
@@ -7,23 +7,10 @@
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
-        <div id="header">
-           <div id="logo">
-                <a href="./">Home</a>
-            </div>
-            <div id="navigation">
-		<a href="./teaching.html">Teaching</a>
-    		<a href="./publications.html">Publications</a>
-                <a href="./links.html">Links</a>
-            </div>
-</div>
- 
-        <div id="content">
-		<h1 id="mcgill-math-123">McGill / Math 123</h1>
+		<div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="mcgill-math-123">McGill / Math 123</h1>
 <p>Introduction to linear algebra with applications from probability theory and optimisation.</p>
 <h1 id="mcgill-math-381">McGill / Math 381</h1>
 <p>Complex calculus focusing on methods for evaluating integrals over domains in the complex plane and the computation of various transforms and their application in engineering.</p>
 <p><a href="pdf/Homework1.pdf">Homework 1</a> <a href="pdf/Homework2.pdf">Homework 2</a> <a href="pdf/Homework3.pdf">Homework 3</a> <a href="pdf/Homework4.pdf">Homework 4</a> <a href="pdf/Homework5.pdf">Homework 5</a></p>
-        </div>
     </body>
 </html>
