--- a/index.html
+++ b/index.html
@@ -7,19 +7,7 @@
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
-        <div id="header">
-           <div id="logo">
-                <a href="./">Home</a>
-            </div>
-            <div id="navigation">
-		<a href="./teaching.html">Teaching</a>
-    		<a href="./publications.html">Publications</a>
-                <a href="./links.html">Links</a>
-            </div>
-</div>
- 
-        <div id="content">
-		<h1 id="matthias-nagel">Matthias Nagel</h1>
+		<div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="matthias-nagel">Matthias Nagel</h1>
 <div id="aboutme">
 <img src="./images/myself.jpg" alt="Photo of myself" id="myphoto" />
 <pre>
@@ -34,6 +22,5 @@ Montréal, QC H2L 2C9
 <h2 id="interests">Interests</h2>
 <p>My field of study is geometric topology. I am interested in various minimality questions. Among them is the study of the genus function of manifolds in dimension 3 and 4.</p>
 <p>One of my favourite tools for studying these questions is twisted Reidemeister torsion. It is connected to Seiberg-Witten theory and the classical Alexander polynomial for knots.</p>
-        </div>
     </body>
 </html>
