--- a/links.html
+++ b/links.html
@@ -7,23 +7,10 @@
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
-        <div id="header">
-           <div id="logo">
-                <a href="./">Home</a>
-            </div>
-            <div id="navigation">
-		<a href="./teaching.html">Teaching</a>
-    		<a href="./publications.html">Publications</a>
-                <a href="./links.html">Links</a>
-            </div>
-</div>
- 
-        <div id="content">
-		<h1 id="links">Links</h1>
+		<div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="links">Links</h1>
 <h2 id="upcoming-talks">Upcoming Talks</h2>
 <p><a href="http://www.cirget.uqam.ca/pages/activ/seminaires_fr.shtml">UQÀM - Géométrie et topologie</a></p>
-<p><a href="http://www.math.mcgill.ca/ggt/">McGill - Geometric group theory</a></p>
+<p><a href="http://www.math.mcgill.ca/~kasia/ggt_seminar/">McGill - Geometric group theory</a></p>
 <p><a href="http://www.uni-regensburg.de/Fakultaeten/nat_Fak_I/aktuelles/mathwoch.html">Regensburg - Wochenplan</a></p>
-        </div>
     </body>
 </html>
