--- a/teaching.html
+++ b/teaching.html
@@ -7,7 +7,10 @@
         <link rel="stylesheet" type="text/css" href="./css/default.css" />
     </head>
     <body>
-		<div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="mcgill-math-123">McGill / Math 123</h1>
+		<div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="seminar-seiberg-witten-theory-and-stable-homotopy-theory">Seminar / Seiberg-Witten theory and stable homotopy theory</h1>
+<p>We want to consider ways of understanding some aspects of Seiberg-Witten theory and the associated Floer theory in terms of stable homotopy theory. The general idea is to associate to the gauge theoretic situation a stable homotopy type. From this we can extract information by the plethora of invariants coming from algebraic topology such as homology. This new way of looking at things has been used to reprove gauge theoretic results like Donaldson’s diagonalisation, the 11/8 theorem and the triangulation conjecture.</p>
+<p><a href="http://www.patrickorson.com/SWstable/">Seminar page</a></p>
+<h1 id="mcgill-math-123">McGill / Math 123</h1>
 <p>Introduction to linear algebra with applications from probability theory and optimisation.</p>
 <h1 id="mcgill-math-381">McGill / Math 381</h1>
 <p>Complex calculus focusing on methods for evaluating integrals over domains in the complex plane and the computation of various transforms and their application in engineering.</p>
