--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Matthias Nagel - index</title>
-        <link rel="stylesheet" type="text/css" href="./css/default.css" />
-    </head>
-    <body>
-    <div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="matthias-nagel">Matthias Nagel</h1>
-<div id="aboutme">
-<img src="./images/myself.jpg" alt="Photo of myself" id="myphoto" />
-<pre>
-Email nagel (at) cirget.ca 
+<!DOCTYPE HTML>
+<html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Nagel - Index</title><link rel="stylesheet" type="text/css" href="./css/default.css"></head><div id="menu"><div id="logo"><a href="./index.html">Home</a></div><div id="navigation"><a href="./teaching.html">Teaching</a><a href="./publications.html">Publications</a><a href="./links.html">Links</a></div></div><h1>Matthias Nagel</h1><div class="leftright"><div><pre>Email nagel (at) cirget.ca
 
 CIRGET
 Université du Québec à Montréal
 201 President Kennedy Ave
-Montréal, QC H2L 2C9
-</pre>
-</div>
-<h1 id="interests">Interests</h1>
-<p>My field of study is geometric topology. I am interested in various minimality questions. Among them is the study of the genus function of manifolds in dimension 3 and 4.</p>
-<p>One of my favourite tools for studying these questions is twisted Reidemeister torsion. It is connected to Seiberg-Witten theory and the classical Alexander polynomial for knots.</p>
-    </body>
-</html>
+Montréal, QC H2L 2C9</pre></div><div><img src="./images/myself.jpg" alt="Photo of myself" id="myphoto"></div></div><h2>Interests</h2><p>My field of study is geometric topology. I am interested invarious minimality questions. Among them is the study of the genus function of manifolds in dimension 3 and 4.</p><p>One of my favourite tools for studying these questions is twisted Reidemeister torsion. It is connected to Seiberg-Witten theory and the classical Alexander polynomial for knots.</p></html>
