--- a/teaching.html
+++ b/teaching.html
@@ -1,20 +1,2 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Matthias Nagel - index</title>
-        <link rel="stylesheet" type="text/css" href="./css/default.css" />
-    </head>
-    <body>
-    <div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="seminar-sw-stable-homotopy-theory">Seminar / SW stable homotopy theory</h1>
-<p>We consider ways of understanding aspects of Seiberg-Witten theory using a stable homotopy theory approach. We associate to the gauge theoretic situation a stable homotopy type. From this, we proceed by extracting information with the plethora of invariants coming from algebraic topology. This new way of looking at Seiberg-Witten has been used to reprove gauge theoretic results like Donaldson’s diagonalisation, the 11/8 theorem and the triangulation conjecture.</p>
-<p><a href="http://www.patrickorson.com/SWstable/">Seminar page</a></p>
-<h1 id="mcgill-math-123">McGill / Math 123</h1>
-<p>Introduction to linear algebra with applications from probability theory and optimisation.</p>
-<p>Exercises on <a href="http://msr02.math.mcgill.ca/webwork2">Webworks</a></p>
-<h1 id="mcgill-math-381">McGill / Math 381</h1>
-<p>Complex calculus focusing on methods for evaluating integrals over domains in the complex plane and the computation of various transforms and their application in engineering.</p>
-<p><a href="./pdf/Homework1.pdf">Homework 1</a> <a href="./pdf/Homework2.pdf">Homework 2</a> <a href="./pdf/Homework3.pdf">Homework 3</a> <a href="./pdf/Homework4.pdf">Homework 4</a> <a href="./pdf/Homework5.pdf">Homework 5</a></p>
-    </body>
-</html>
+<!DOCTYPE HTML>
+<html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Nagel - Teaching</title><link rel="stylesheet" type="text/css" href="./css/default.css"></head><div id="menu"><div id="logo"><a href="./index.html">Home</a></div><div id="navigation"><a href="./teaching.html">Teaching</a><a href="./publications.html">Publications</a><a href="./links.html">Links</a></div></div><h2>McMaster / Math 731</h2><p>Introduction to algebraic topology with focus on the fundamental group and homology.</p><p><a href="./algtop.html">Course page</a></p><h2>Seminar / SW stable homotopy theory</h2><p>We consider ways of understanding aspects of Seiberg-Witten theory using a stable homotopy theory approach.We associate to the gauge theoretic situation a stable homotopy type. From this, we proceed by extracting information with the plethora of invariants coming from algebraic topology. This new way of looking at Seiberg-Witten has been used to reprove gauge theoretic results like Donaldson’s diagonalisation, the 11/8 theorem and the triangulation conjecture.</p><p><a href="http://www.patrickorson.com/SWstable/">Seminar page</a></p><h2>McGill / Math 123</h2><p>Introduction to linear algebra with applications from probability theory and optimisation.</p><p>Exercises on <a href="http://msr02.math.mcgill.ca/webwork2">Webworks</a></p><h2>McGill / Math 381</h2><p>Complex calculus focusing on methods for evaluating integrals over domains in the complex plane and the computation of various transforms and their application in engineering.</p><p><a href="./pdf/Homework1.pdf">Homework1</a> <a href="./pdf/Homework2.pdf">Homework2</a> <a href="./pdf/Homework3.pdf">Homework3</a> <a href="./pdf/Homework4.pdf">Homework4</a> <a href="./pdf/Homework5.pdf">Homework5</a></p></html>
