--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 HH414
 McMaster University
 1280 Main Street
-Hamilton, Ontario</pre></div><div><img src="./images/myself.jpg" alt="Photo of myself" id="myphoto"></div></div><h2>Interests</h2><p>My field of study is geometric topology. I am interested invarious minimality questions. Among them is the study of the genus function of manifolds in dimension 3 and 4.</p><p>One of my favourite tools for studying these questions is twisted Reidemeister torsion. It is connected to Seiberg-Witten theory and the classical Alexander polynomial for knots.</p></html>
+Hamilton, Ontario</pre></div><div><img src="./images/myself.jpg" alt="Photo of myself" id="myphoto"></div></div><h2>Interests</h2><p>My field of study is geometric topology. I am interested in concordance of links, and surfaces of minimal genus in 3- and 4-manifolds.</p><p>One of my favourite tools for studying these questions is the signature and twisted Reidemeister torsion.</p></html>
