--- a/links.html
+++ b/links.html
@@ -1,16 +1,2 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-        <title>Matthias Nagel - index</title>
-        <link rel="stylesheet" type="text/css" href="./css/default.css" />
-    </head>
-    <body>
-    <div id="menu"><div id="logo"><a href="./">Home</a></div><div id="navigation"><a href="teaching.html">Teaching</a><a href="publications.html">Publication</a><a href="links.html">Links</a></div></div><h1 id="links">Links</h1>
-<h2 id="upcoming-talks">Upcoming Talks</h2>
-<p><a href="http://www.cirget.uqam.ca/pages/activ/seminaires_fr.shtml">UQÀM - Géométrie et topologie</a></p>
-<p><a href="http://www.math.mcgill.ca/ggt/">McGill - Geometric group theory</a></p>
-<p><a href="http://www.uni-regensburg.de/Fakultaeten/nat_Fak_I/aktuelles/mathwoch.html">Regensburg - Wochenplan</a></p>
-    </body>
-</html>
+<!DOCTYPE HTML>
+<html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Links</title><link rel="stylesheet" type="text/css" href="./css/default.css"></head><div id="menu"><div id="logo"><a href="./index.html">Home</a></div><div id="navigation"><a href="./teaching.html">Teaching</a><a href="./publications.html">Publications</a><a href="./links.html">Links</a></div></div><h1>Links</h1><h2>Seminars</h2><a href="http://ms.mcmaster.ca/matthias.nagel/topologyseminar.html">McMaster Topology &amp; Geometry</a><br><a href="https://seminars.math.toronto.edu/seminars/list/events.py/process?start">University of Toronto</a><br><a href="http://www.fields.utoronto.ca/calendar/month/">Fields Institute</a></html>
