--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 HH414
 McMaster University
 1280 Main Street
-Hamilton, Ontario</pre>I am organising the <a href="http://ms.mcmaster.ca/matthias.nagel/topologyseminar.html">Geometry &amp; Topology seminar</a>.</div><div><img src="./images/myself.jpg" alt="Photo of myself" id="myphoto"></div></div><h2>Interests</h2><p>My field of study is geometric topology. I am interested in concordance of links, and surfaces of minimal genus in 3- and 4-manifolds.</p><p>One of my favourite tools for studying these questions is the signature and twisted Reidemeister torsion.</p></html>
+Hamilton, Ontario</pre>I am organising the <a href="http://ms.mcmaster.ca/matthias.nagel/topologyseminar.html">Geometry &amp; Topology seminar</a>.</div><div><img src="./images/myself2.jpg" alt="Photo of myself" id="myphoto"></div></div><h2>Interests</h2><p>My field of study is geometric topology. I am interested in concordance of links, and surfaces of minimal genus in 3- and 4-manifolds.</p><p>One of my favourite tools for studying these questions is the signature and twisted Reidemeister torsion.</p></html>
