--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE HTML>
-<html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Index</title><link rel="stylesheet" type="text/css" href="./css/default.css"></head><div id="menu"><div id="logo"><a href="./index.html">Home</a></div><div id="navigation"><a href="./teaching.html">Teaching</a><a href="./publications.html">Publications</a><a href="./links.html">Links</a></div></div><h1>Matthias Nagel</h1><div class="leftright"><div><pre>Email matthias.nagel (at) math.mcmaster.ca
+<html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Index</title><link rel="stylesheet" type="text/css" href="./css/default.css"></head><div id="menu"><div id="logo"><a href="./index.html">Home</a></div><div id="navigation"><a href="./teaching.html">Teaching</a><a href="./publications.html">Publications</a><a href="./links.html">Links</a></div></div><h1>Matthias Nagel</h1><div class="leftright"><div><pre>nagel (at) maths.ox.ac.uk
 
-HH414
-McMaster University
-1280 Main Street
-Hamilton, Ontario</pre>I am organising the <a href="https://ms.mcmaster.ca/~nagelm1/topologyseminar.html">Geometry &amp; Topology seminar</a>.</div><img src="./images/myself2.jpg" alt="Photo of myself" id="myphoto"></div><h2>Interests</h2><p>My field of study is geometric topology. I am interested in concordance of links, and surfaces of minimal genus in 3- and 4-manifolds.</p><p>One of my favourite tools for studying these questions is the signature and twisted Reidemeister torsion.</p></html>
+Mathematical Institute
+University of Oxford
+Oxford, United Kingdom</pre></div><div><img src="./images/myself2.jpg" alt="Photo of myself" id="myphoto"></div></div><h2>Interests</h2><p>My field of study is geometric topology. I am interested in concordance of links, and surfaces of minimal genus in 3- and 4-manifolds.</p><p>One of my favourite tools for studying these questions is the signature and twisted Reidemeister torsion.</p></html>
