Misc and updated publications

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Index</title><link rel="stylesheet" type="text/css" href="./css/default.css"></head><div id="menu"><div id="logo"><a href="./index.html">Home</a></div><div id="navigation"><a href="./teaching.html">Teaching</a><a href="./publications.html">Publications</a><a href="./links.html">Links</a></div></div><h1>Matthias Nagel</h1><div class="leftright"><div><pre>nagel (at) maths.ox.ac.uk
+<html><head><meta http-equiv="content-type" content="text/html; charset=utf-8"><title>Index</title><link rel="stylesheet" type="text/css" href="./css/default.css"></head><div id="menu"><div id="logo"><a href="./index.html">Home</a></div><div id="navigation"><a href="./teaching.html">Teaching</a><a href="./publications.html">Publications</a><a href="./misc.html">Misc</a></div></div><h1>Matthias Nagel</h1><div class="leftright"><div><pre>nagel (at) maths.ox.ac.uk
 
 Mathematical Institute
 University of Oxford
